Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12055

Segfault in QTextStream

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.3.0 Alpha
    • 4.5.0, 4.5.1, 4.5.2, 4.5.3, 4.6.0, 4.6.1, 4.6.2, 4.6.3, 4.7.0, 6.2.0 Beta1
    • Core: I/O
    • None
    • GNU/Linux
    • 21
    • 62b33b6730ab995022149e65618a4a92b4992a49 (qt/tqtc-qtbase/dev)
    • Qt6_Foundation_Sprint 37, Qt6_Foundation_Sprint 38

      There seems to be a bug in QTextStrem/IO device class when used with threads. The attached example reproduces the bug. The effect is more visible on slower machines or if more than one instance of the application running (the segfault is random).

      Note:
      The way the example is written is a bit unusual, as it just continue to write to the same stream (the QTextStream is a member of the class), also seek is never called to go back to the start of the stream. But it still should not segfault as it does.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            sanonymous Nokia Qt Support (Inactive)
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes